fix: fix top navbar on tablet

--- a/styles/weather.css
+++ b/styles/weather.css
@@ -120,7 +120,6 @@ main {
   justify-content: flex-start;
   width: 100%;
   overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 .tf-cards::-webkit-scrollbar-track {
@@ -291,13 +290,13 @@ main {
 
 /* Mobile Screens (<= 768px) */
 @media (max-width: 768px) {
-  body {
-    padding: 10px;
+  .main {
+    max-width: 100%;
+    width: 100%;
   }
 
-  main {
-    flex-direction: column;
-    gap: 15px;
+  body {
+    padding: 10px;
   }
 
   .search-bar {
